--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cycler==0.10.0
 Flask==1.0.2
 Flask-Cors==3.0.7
 Flask-SocketIO==3.2.1
+Flask-WTF==0.14.2
 greenlet==0.4.15
 gunicorn==19.9.0
 idna==2.8
